# LilBot-agent

./: .gitignore  AUTHORS  CHANGELOG.md  README.md  SPEC_TEAMS_AND_TEAMMATES.md  Untitled  hello.txt  hello002.txt  pyproject.toml  requirements.txt
docs/: CC_COMPACTION_REPLICATION_STATUS.md  CC_DEEPDIVE_COMPACTION_PIPELINE.md  CONTEXT_COMPACTION.md  LILBOT_VS_CLAUDE_CODE_COMPARISON.md  TEAMS_EXPLAINED.md  TECH_REPORT_M1-M8.md  VERIFY_M1-M8.md  codewhale-parity-roadmap.md  lilbot-agent-interview-qa-cn.md  lilbot-subagents-skills-tools-complete-inventory.md  spec-codewhale-parity-phase1.md
experiment/: delegation_matrix.py  sort_benchmark.py  teams_demo.py
lilbot/: __init__.py  agent.py  cli.py  config.py  dashboard.py  events.py  memory.py  permissions.py  prompts.py  providers.py  sandbox.py  skills.py  subagents.py  ui.py  windows_console.py
tests/: test_agent_loop.py  test_auto_diagnostics.py  test_batch1_workspace_tools.py  test_cache_usage.py  test_catalog_cache.py  test_cc_parity_batch2.py  test_cc_parity_batch3.py  test_compaction.py  test_compaction_cc.py  test_config.py  test_core.py  test_cycles.py  test_dashboard_trace.py  test_deferred_tools.py  test_delegation_matrix.py  test_dynamic_tool_descriptions.py  test_execpolicy.py  test_file_history.py  test_file_memory.py  test_hooks.py  test_input_history.py  test_mcp_client.py  test_mcp_server.py  test_memory_recall.py  test_model_agnostic.py  test_offload.py  test_parallel_tools.py  test_permission_rules.py  test_recall_prefetch.py  test_secrets.py  test_session.py  test_session_memory.py  test_streaming.py  (+4 more)
(+91 files in other folders)
