[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lilbot-agent"
version = "0.1.0"
description = "LilBot: a clean-room local coding agent playground."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "rich>=13.0.0",
]

[project.scripts]
lilbot = "lilbot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lilbot*"]

